--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -282,8 +282,8 @@
 									</label>
 								</li>
 								<li class="Ctrl">
-									<label for="Combobox_SettingsDisplayAnimSpd"><span>动画速度：</span>
-										<select class="Combobox" id="Combobox_SettingsDisplayAnimSpd" onchange="SetDisplayAnimSpd()">
+									<label for="Combobox_SettingsDisplayAnimSpeed"><span>动画速度：</span>
+										<select class="Combobox" id="Combobox_SettingsDisplayAnimSpeed" onchange="SetDisplayAnimSpeed()">
 											<option value="0.5s">慢 (0.5s)</option>
 											<option value="0.3s" selected>中 (0.3s)</option>
 											<option value="0.1s">快 (0.1s)</option>
@@ -302,6 +302,23 @@
 									<label for="Checkbox_SettingsSoundPlaySound">
 										<input class="Checkbox" id="Checkbox_SettingsSoundPlaySound" type="checkbox" checked="true" onchange="SetSoundPlaySound()" />
 										<span>播放声音</span>
+									</label>
+								</li>
+							</ul>
+						</fieldset>
+					</li>
+					<li class="Item" id="Item_SettingsI18n">
+						<fieldset>
+							<legend>国际化</legend>
+							<ul class="CtrlGroup">
+								<li class="Ctrl">
+									<label for="Combobox_SettingsI18nLanguage"><span>语言 (Language)：</span>
+										<select class="Combobox" id="Combobox_SettingsI18nLanguage" onchange="SetI18nLanguage()">
+											<option value="zh-CN" selected>中文 (简体)</option>
+											<option value="en-US">English (US) [Not yet supported]</option>
+											<option value="ja-JP">日本語 [まだサポートされていません]</option>
+											<option value="zh-TW">中文 (繁體) [暫不支援]</option>
+										</select>
 									</label>
 								</li>
 							</ul>
