Following main page v1.33 additional update.

--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -100,17 +100,17 @@
 					<li class="Ctrl" id="Ctrl_TimerDashboardCurrentTime">
 						<ul class="CtrlGroup" id="CtrlGroup_TimerDashboardCurrentTime">
 							<li class="Ctrl Box">
-								<div class="ScrollingNum" id="ScrollingNum_Timer1">
+								<div class="ScrollingNumber" id="ScrollingNumber_Timer1">
 									<p>9</p><p>8</p><p>7</p><p>6</p><p>5</p><p>4</p><p>3</p><p>2</p><p>1</p><p> </p>
 								</div>
 							</li>
 							<li class="Ctrl Box">
-								<div class="ScrollingNum" id="ScrollingNum_Timer2">
+								<div class="ScrollingNumber" id="ScrollingNumber_Timer2">
 									<p>1</p><p>0</p><p>9</p><p>8</p><p>7</p><p>6</p><p>5</p><p>4</p><p>3</p><p>2</p><p>1</p><p>0</p><p>9</p>
 								</div>
 							</li>
 							<li class="Ctrl Box">
-								<div class="ScrollingNum" id="ScrollingNum_Timer3">
+								<div class="ScrollingNumber" id="ScrollingNumber_Timer3">
 									<p>1</p><p>0</p><p>9</p><p>8</p><p>7</p><p>6</p><p>5</p><p>4</p><p>3</p><p>2</p><p>1</p><p>0</p><p>9</p>
 								</div>
 							</li>
@@ -119,12 +119,12 @@
 								<div class="TimeSeparator"></div>
 							</li>
 							<li class="Ctrl Box">
-								<div class="ScrollingNum" id="ScrollingNum_Timer4">
+								<div class="ScrollingNumber" id="ScrollingNumber_Timer4">
 									<p>1</p><p>0</p><p>5</p><p>4</p><p>3</p><p>2</p><p>1</p><p>0</p><p>5</p>
 								</div>
 							</li>
 							<li class="Ctrl Box">
-								<div class="ScrollingNum" id="ScrollingNum_Timer5">
+								<div class="ScrollingNumber" id="ScrollingNumber_Timer5">
 									<p>1</p><p>0</p><p>9</p><p>8</p><p>7</p><p>6</p><p>5</p><p>4</p><p>3</p><p>2</p><p>1</p><p>0</p><p>9</p>
 								</div>
 							</li>
@@ -191,16 +191,16 @@
 			<section id="摇号">
 				<h1 class="SectionTitle">摇号</h1>
 				<ul class="CtrlGroup" id="CtrlGroup_LotteryDashboard">
-					<li class="Ctrl Box Ctrl_LotteryDashboardLargeNum"><p id="Label_LotteryDashboardNum01">号码</p></li>
-					<li class="Ctrl Box Ctrl_LotteryDashboardLargeNum"><p id="Label_LotteryDashboardNum02">号码</p></li>
-					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNum"><p id="Label_LotteryDashboardNum03">号码</p></li>
-					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNum"><p id="Label_LotteryDashboardNum04">号码</p></li>
-					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNum"><p id="Label_LotteryDashboardNum05">号码</p></li>
-					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNum"><p id="Label_LotteryDashboardNum06">号码</p></li>
-					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNum"><p id="Label_LotteryDashboardNum07">号码</p></li>
-					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNum"><p id="Label_LotteryDashboardNum08">号码</p></li>
-					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNum"><p id="Label_LotteryDashboardNum09">号码</p></li>
-					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNum"><p id="Label_LotteryDashboardNum10">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardLargeNumber"><p id="Label_LotteryDashboardNumber01">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardLargeNumber"><p id="Label_LotteryDashboardNumber02">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNumber"><p id="Label_LotteryDashboardNumber03">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNumber"><p id="Label_LotteryDashboardNumber04">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNumber"><p id="Label_LotteryDashboardNumber05">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNumber"><p id="Label_LotteryDashboardNumber06">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNumber"><p id="Label_LotteryDashboardNumber07">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNumber"><p id="Label_LotteryDashboardNumber08">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNumber"><p id="Label_LotteryDashboardNumber09">号码</p></li>
+					<li class="Ctrl Box Ctrl_LotteryDashboardSmallNumber"><p id="Label_LotteryDashboardNumber10">号码</p></li>
 				</ul>
 
 				<ul class="ItemGroup">
