--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -341,7 +341,7 @@
 									</label>
 								</li>
 								<li class="Ctrl">
-									<button class="Cmdbtn" id="Cmdbtn_SettingsDevClearLocalStorage" onclick="ClearLocalStorage()">清空 Local Storage</button>
+									<button class="Cmdbtn" id="Cmdbtn_SettingsDevClearLocalStorage" onclick="SetDevClearLocalStorage()">清空 Local Storage</button>
 								</li>
 							</ul>
 						</fieldset>
