Following main page v1.48 update.

--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -339,10 +339,10 @@
 									<label for="Combobox_SettingsDisplayAnimSpeed">
 										<span>动画速度：</span>
 										<select class="Combobox" id="Combobox_SettingsDisplayAnimSpeed" onchange="SetDisplayAnimSpeed()">
-											<option value="0.5s">慢 (0.5s)</option>
-											<option value="0.3s" selected>中 (0.3s)</option>
-											<option value="0.1s">快 (0.1s)</option>
-											<option value="none">关闭动画 (无障碍)</option>
+											<option value="500">慢 (500ms)</option>
+											<option value="300" selected>中 (300ms)</option>
+											<option value="100">快 (100ms)</option>
+											<option value="0">关闭动画 (无障碍)</option>
 										</select>
 									</label>
 								</li>
