--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -137,7 +137,7 @@
 				</ul>
 
 				<ul class="ItemGroup">
-					<li class="Item" id="Item_TimerCtrl">
+					<li class="Item">
 						<fieldset>
 							<legend>控制</legend>
 							<ul class="CtrlGroup" id="CtrlGroup_TimerCtrl">
@@ -156,7 +156,7 @@
 							</ul>
 						</fieldset>
 					</li>
-					<li class="Item" id="Item_TimerOptions">
+					<li class="Item">
 						<fieldset>
 							<legend>选项</legend>
 							<ul class="CtrlGroup" id="CtrlGroup_TimerOptions">
@@ -178,7 +178,7 @@
 							</ul>
 						</fieldset>
 					</li>
-					<li class="Item" id="Item_TimerPresets">
+					<li class="Item">
 						<fieldset>
 							<legend>预设</legend>
 							<ul class="CtrlGroup" id="CtrlGroup_TimerPresets">
@@ -251,7 +251,7 @@
 				</ul>
 
 				<ul class="ItemGroup">
-					<li class="Item" id="Item_LotteryCtrl">
+					<li class="Item">
 						<fieldset>
 							<legend>控制</legend>
 							<ul class="CtrlGroup" id="CtrlGroup_LotteryCtrl">
@@ -264,7 +264,7 @@
 							</ul>
 						</fieldset>
 					</li>
-					<li class="Item" id="Item_LotteryOptions">
+					<li class="Item">
 						<fieldset>
 							<legend>选项</legend>
 							<ul class="CtrlGroup" id="CtrlGroup_LotteryOptions">
@@ -301,7 +301,7 @@
 			<section id="Settings">
 				<h1 class="SectionTitle">设定</h1>
 				<ul class="ItemGroup">
-					<li class="Item" id="Item_SettingsDisplay">
+					<li class="Item">
 						<fieldset>
 							<legend>显示</legend>
 							<ul class="CtrlGroup">
@@ -349,7 +349,7 @@
 							</ul>
 						</fieldset>
 					</li>
-					<li class="Item" id="Item_SettingsSound">
+					<li class="Item">
 						<fieldset>
 							<legend>声音</legend>
 							<ul class="CtrlGroup">
@@ -362,10 +362,10 @@
 							</ul>
 						</fieldset>
 					</li>
-					<li class="Item" id="Item_SettingsDev">
+					<li class="Item">
 						<fieldset>
 							<legend>开发者选项</legend>
-							<ul class="CtrlGroup" id="CtrlGroup_SettingsDev">
+							<ul class="CtrlGroup">
 								<li class="Ctrl">
 									<label for="Checkbox_SettingsDevShowAllBorders">
 										<input class="Checkbox" id="Checkbox_SettingsDevShowAllBorders" type="checkbox" checked="false" onchange="SetDevShowAllBorders()" />
@@ -387,7 +387,7 @@
 							</ul>
 						</fieldset>
 					</li>
-					<li class="Item" id="Item_SettingsUserData">
+					<li class="Item">
 						<fieldset>
 							<legend>用户数据</legend>
 							<ul class="CtrlGroup" id="CtrlGroup_SettingsUserData">
@@ -496,7 +496,7 @@
 							<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
 						</svg>
 					</li>
-					<li class="Ctrl" id="Ctrl_PopupDialogText">提示文字</li>
+					<li class="Ctrl" id="Ctrl_PopupDialogText">对话框文字</li>
 				</ul>
 				<ul class="CtrlGroup" id="CtrlGroup_PopupDialogOptions">
 					<li class="Ctrl Faded" id="Ctrl_PopupDialogOption1">
