--- a/PROJECT/Timer+Lottery/index.html
+++ b/PROJECT/Timer+Lottery/index.html
@@ -15,6 +15,8 @@
 		<meta name="keywords" content="Sam Toki, SAM TOKI STUDIO, Timer+Lottery, 计时器, 摇号器" />
 		<meta name="copyright" content="(C) 2023 SAM TOKI STUDIO" />
 
+		<meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF">
+		<meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#303030">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../styles/common.css" />
 		<link id="ThemeVariant_Common" rel="stylesheet" href="../styles/common_Dark.css" media="(prefers-color-scheme: dark)" />
@@ -36,7 +38,7 @@
 			<ul class="CtrlGroup">
 				<li class="Ctrl" id="Ctrl_Title">
 					<a href="https://SamToki.github.io/Timer+Lottery" aria-label="Timer+Lottery">
-						<img src="images/Title.png" alt="网页图标" />
+						<img src="images/Icon.png" alt="网页图标" />
 					</a>
 				</li>
 				<li class="Ctrl" id="Ctrl_Nav">
